fixed typo noted by Emily

--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -118,7 +118,7 @@ After the advent of tight closure \cite{HochsterHunekeTC1}, the usage of Frobeni
 Along these lines, the \emph{$F$-pure threshold} %associated to an element of $R$
 was defined in analogy with the \emph{log canonical threshold} \cite{TakagiWatanabeFPureThresh}, and
 %The $F$-pure threshold of the pair $(R, f)$ is the supremum over all $t$ for which $(R, f^t)$ is $F$-pure.
-\emph{$F$-threholds} were then introduced as a family of invariants that naturally extend the notion of an $F$-pure threshold \cite{MustataTakagiWatanabeFThresholdsAndBernsteinSato}.
+\emph{$F$-thresholds} were then introduced as a family of invariants that naturally extend the notion of an $F$-pure threshold \cite{MustataTakagiWatanabeFThresholdsAndBernsteinSato}.
 
 Though the $F$-pure threshold is defined in analogy with the log canonical threshold, their connection extends beyond mere analogy. For example, suppose $h$ is a polynomial with integer coefficients, and that $h_p$ is the polynomial obtained by reducing the coefficients of $h$ modulo a prime $p$.  Then, the $F$-pure thresholds of the reductions $h_p$ limit to the log canonical threshold of $h$ as $p$ tends to infinity \cite{HaraYoshidaGeneralizationOfTightClosure}.    A related result is that of Z.~Zhu, who proved in  \cite[Corollary 4.2]{ZhuLogCanoincalThresholdsInPositiveChar} that the log canical threshold of $h$ at least the $F$-pure threshold of any reduction $h_p$.
 
