Minor change to subsection title

--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -679,7 +679,7 @@ o3 : List
 }
 \medspace
 
-\subsection{The option {\tt UseSpecialAlgorithms} for the {\tt fpt} function}
+\subsection{The option {\tt UseSpecialAlgorithms}}
 
 The {\tt fpt} function has the option {\tt UseSpecialAlgorithms}, which, when set to {\tt true} (its default value), tells {\tt fpt} to first check whether $f$ is a diagonal polynomial, a binomial, a form in two variables, or a product of factors in simple normal crossing, in that order.
 
