--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -1172,25 +1172,17 @@ o10 = true
 
 
 
-\newpage
-\section{Future Directions}
+\section{Possible Future Directions}
 \label{sec.FutureDirections}
 
-We conclude with some comments on possible improvements to the package.
+One natural future direction would be to better incorporate the test ideals $\tau(I^t)$ when computing $F$-thresholds in the case that the ideal $I$ is not necessarily principal.  The theoretical foundation for computing such ideals has already largely been worked out in the paper \cite{SchwedeTuckerTestIdealsOfNonPrincipal}, but such an update to the \emph{FrobeniusThresholds} package would likely the 
+\emph{TestIdeals} package to be updated first.
 
-One natural candidate for improvement would be to extend functionality to better handle nonprincipal ideals.  In particular, the package could be improved if it could use the test ideals $\tau(I^t)$ when $I$ is not necessarily principal.  Fortunately, the theoretical foundation for computing such ideals has already largely been worked out in the paper \cite{SchwedeTuckerTestIdealsOfNonPrincipal}. However, such an improvement would necessarily require an update to the \emph{TestIdeals} package.
+At the moment, the specialized algorithm called by the {\tt fpt} function for computing the $F$-pure threshold of a homogeneous polynomial in two variables limits us to working with the standard grading on the ambient polynomial ring.  Clearly, it is desirable to be able to work with non-standard gradings as well, and results in the paper \cite{HernandezTeixeiraFThresholdFunctions} suggest an algorithm for doing so.  Thus, the package could be improved by finalizing, and implementing, such an algorithm.
 
-\begin{enumerate}
-\item Add more cases to {\tt UseSpecialAlgorithms}.
-%\item Add the capability to compute non-local {\tt fpt} and non-local {\tt nu} via an option.
-\item Write a function that will extract from this sequences $\{ \nu_f^{\idealm}(p^e) \}_{e=1}^{\infty}$ roots of Bernstein-Sato polynomials.  Especially, strata.
-
-\item Extend binary forms functions to handle more general $F$-thresholds (that is, with respect to diagonal ideals).  There is one tricky theoretical things, we don't know when this process would stop.  If we can do this, then we can compute $F$-pure thresholds of binary forms in non-standard gradings.  Cite the paper by Daniel and Pedro \cite{HernandezTeixeiraFThresholdFunctions}.
-\end{enumerate}
+Finally, it would be natural to to develop, and implement,  additional algorithms for computing $F$-pure threshold and $F$-jumping numbers in specialized situations apart from monomials, diagonals, binomials, and simple normal crossings.  The first, third, and fourth authors, along with Josep \'Alvarez Montaner and Jack Jeffries,  are currently working on developing such algorithms.  The theoretical foundation of these algorithms lies in polyhedral geometry and integer programming, and as such, should be able to be implemented in \emph{Macaualy2}.  
 
 
-
-\newpage
 \bibliographystyle{skalpha}
 \bibliography{MainBib}
 
